--- a/ayce-main/ayce-code/Views/Shared/Partials/Header.cshtml
+++ b/ayce-main/ayce-code/Views/Shared/Partials/Header.cshtml
@@ -1,13 +1,13 @@
 ﻿
 <nav class="navigation-bar top-bar">
-    <div class="navigation-main-name">
+    <div class="navigation-main-name top-bar-left">
         <span class="show-for-small-only">
             <button class="menu-icon" type="button" data-toggle></button>
         </span>
-        
+        <img src="~/Assets/Images/logo-90x90.png"/>
         @Html.ActionLink("ayce", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
     </div>
-    <div class="topbar-responsive-links">
+    <div class="navigation-links top-bar-right topbar-responsive-links">
         <div class="top-bar-right">
             <ul class="menu simple vertical medium-horizontal">
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
