--- a/ayce-main/ayce-code/Views/Shared/Partials/Header.cshtml
+++ b/ayce-main/ayce-code/Views/Shared/Partials/Header.cshtml
@@ -1,23 +1,22 @@
 ﻿
-<nav class="navigation-bar top-bar">
-    <div class="navigation-hamburger show-for-small-only">
-        <span>
-            <button class="menu-icon" type="button" data-toggle></button>
-        </span>
-    </div>
-    <div class="navigation-main-name top-bar-left">
-        <a href="@HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority)">
-            <img class="logo-img" src="~/Assets/Images/logo-90x90.png" width="42" height="42"/>
-            <span class="site-title">ayce</span>
-        </a>
-    </div>
-    <div class="navigation-links top-bar-right topbar-responsive-links">
-        <div class="top-bar-right">
-            <ul class="menu simple vertical medium-horizontal">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("About", "About", "Home")</li>
-                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-            </ul>
+    <nav class="navigation-bar top-bar">
+        <div class="navigation-hamburger show-for-small-only">
+            <span>
+                <button class="menu-icon" type="button" data-toggle></button>
+            </span>
         </div>
-    </div>
-</nav>
+        <div class="navigation-main-name top-bar-left">
+            <a href="@HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority)">
+                <img class="logo-img" src="~/Assets/Images/logo-90x90.png" width="64" height="64" />
+            </a>
+        </div>
+        <div class="navigation-links top-bar-right topbar-responsive-links show-for-medium">
+            <div class="navigation-links-container">
+                <ul class="menu simple vertical medium-horizontal">
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                </ul>
+            </div>
+        </div>
+    </nav>
