Updated navigation top bar styles and view. Included Hero component setup.

--- a/ayce-main/ayce-code/Assets/Styles/_Colors.scss
+++ b/ayce-main/ayce-code/Assets/Styles/_Colors.scss
@@ -1,1 +1,7 @@
-﻿
+﻿//Main site themes
+$primary-maroon: #8D0F39;
+
+//Standard text and background colors
+$white: #FFFFFF;
+$gray: #888888;
+$black: #000000;
