Implemented ButterCMS controller to pull in data for main pages Developed view, styles and model for hero component Developed multiple models for components and pages

--- a/ayce-main/ayce-code/Assets/Styles/Site.scss
+++ b/ayce-main/ayce-code/Assets/Styles/Site.scss
@@ -1,5 +1,9 @@
-﻿//Color Themes
-@import '_Colors.scss';
+﻿
+//Main styles
+@import 'Main/_Settings.scss';
+@import 'Main/_Mixins.scss';
+@import 'Main/_Global.scss';
+@import 'Main/_Header.scss';
 
-//Header Themes
-@import '_Header.scss';
+//Components
+@import 'Components/_Hero.scss';
