--- a/ayce-main/ayce-code/Assets/Styles/Site.css
+++ b/ayce-main/ayce-code/Assets/Styles/Site.css
@@ -1,4 +1,77 @@
-﻿.topbar-responsive {
+﻿/**/
+body {
+  font-family: "Georgia", serif;
+  color: #000000;
+  background-color: #FFFFFF;
+  font-size: 1rem;
+  margin: 0 auto; }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Poiret One", cursive;
+  font-weight: 700;
+  text-align: center; }
+
+@media (max-width: 40em) {
+  h1 {
+    font-size: 4rem;
+    line-height: 3rem; }
+  h2 {
+    font-size: 2.5rem;
+    line-height: 2rem; }
+  h3 {
+    font-size: 2.25rem;
+    line-height: 2rem; }
+  h4 {
+    font-size: 2rem;
+    line-height: 1.5rem; }
+  h5 {
+    font-size: 1.5rem;
+    line-height: 1.25rem; }
+  h6 {
+    font-size: 1.25rem;
+    line-height: 1rem; } }
+
+@media (min-width: 40em) and (max-width: 64em) {
+  h1 {
+    font-size: 5rem;
+    line-height: 4rem; }
+  h2 {
+    font-size: 3rem;
+    line-height: 2.5rem; }
+  h3 {
+    font-size: 2.75rem;
+    line-height: 2.5rem; }
+  h4 {
+    font-size: 2.5rem;
+    line-height: 2rem; }
+  h5 {
+    font-size: 2rem;
+    line-height: 1.75rem; }
+  h6 {
+    font-size: 1.5rem;
+    line-height: 1.25rem; } }
+
+@media (min-width: 64em) {
+  h1 {
+    font-size: 6rem;
+    line-height: 5rem; }
+  h2 {
+    font-size: 3.5rem;
+    line-height: 3rem; }
+  h3 {
+    font-size: 3.25rem;
+    line-height: 3rem; }
+  h4 {
+    font-size: 3rem;
+    line-height: 2.5rem; }
+  h5 {
+    font-size: 2.5rem;
+    line-height: 2.25rem; }
+  h6 {
+    font-size: 2rem;
+    line-height: 1.75rem; } }
+
+.topbar-responsive {
   background: #FFFFFF;
   padding: 1rem 1.5rem;
   border-bottom-color: #eeeeee;
@@ -52,3 +125,48 @@
   animation-duration: 0.5s;
   width: 100%;
   animation: fadeIn 1s ease-in; }
+
+.hero-component {
+  min-height: 25rem; }
+
+.hero-background-image {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  position: relative; }
+
+.hero-text {
+  position: absolute;
+  color: #FFFFFF;
+  bottom: 20%;
+  text-align: center;
+  left: 20%;
+  width: 60%; }
+
+@media (max-width: 40em) {
+  .hero-headline-text {
+    font-size: 4rem;
+    line-height: 5rem;
+    margin-bottom: 2rem; }
+  .hero-subheadline-text {
+    font-size: 1rem;
+    line-height: 1rem; } }
+
+@media (min-width: 40em) and (max-width: 64em) {
+  .hero-headline-text {
+    font-size: 6rem;
+    line-height: 8rem;
+    margin-bottom: 1rem; }
+  .hero-subheadline-text {
+    font-size: 1.25rem;
+    line-height: 1.5rem; } }
+
+@media (min-width: 64em) {
+  .hero-headline-text {
+    font-size: 10rem;
+    line-height: 15rem;
+    margin-bottom: 1rem; }
+  .hero-subheadline-text {
+    font-size: 1.5rem;
+    line-height: 2rem; } }
