--- a/ayce-main/ayce-code/Views/ButterCMSPage/Dish.cshtml
+++ b/ayce-main/ayce-code/Views/ButterCMSPage/Dish.cshtml
@@ -1,10 +1,4 @@
-﻿@{
-    ViewBag.Title = "Contact";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<address>
+﻿<address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
