--- a/ayce-main/ayce-code/Views/Shared/Partials/Header.cshtml
+++ b/ayce-main/ayce-code/Views/Shared/Partials/Header.cshtml
@@ -2,7 +2,7 @@
 <nav class="navigation-bar top-bar topbar-responsive">
     <div class="top-bar-title">
         <a class="topbar-responsive-logo" href="@HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority)">
-            <img class="logo-img" src="~/Assets/Images/logo-90x90.png" width="64" height="64" alt="ayce Logo"/>
+            <img class="logo-img" src="~/Assets/Icons/Logo.svg" width="64" height="64" alt="ayce Logo"/>
         </a>
         <span class="show-for-small-only" data-responsive-toggle="topbar-responsive" data-hide-for="medium">
             <button class="menu-icon" type="button" data-toggle="topbar-responsive"></button>
