--- a/ayce-main/ayce-code/Assets/Styles/Main/_Global.scss
+++ b/ayce-main/ayce-code/Assets/Styles/Main/_Global.scss
@@ -31,6 +31,9 @@ h1, h2, h3, h4, h5, h6 {
     h6 {
         @include h6-small;
     }
+    p {
+        @include p-small;
+    }
 }
 
 @media (min-width: 40em) and (max-width: 64em) {
@@ -57,6 +60,10 @@ h1, h2, h3, h4, h5, h6 {
     h6 {
         @include h6-medium;
     }
+
+    p {
+        @include p-medium;
+    }
 }
 
 @media (min-width: 64em) {
@@ -82,6 +89,10 @@ h1, h2, h3, h4, h5, h6 {
 
     h6 {
         @include h6-large;
+    }
+    
+    p {
+        @include p-large;
     }
 }
 
