--- a/ayce-main/ayce-code/Assets/Styles/Main/_Mixins.scss
+++ b/ayce-main/ayce-code/Assets/Styles/Main/_Mixins.scss
@@ -89,3 +89,15 @@
     font-size: 2rem;
     line-height: 1.75rem;
 }
+
+@mixin p-small {
+    font-size: 0.75rem;
+}
+
+@mixin p-medium {
+    font-size: 0.85rem;
+}
+
+@mixin p-large {
+    font-size: 1rem;
+}
