--- a/ayce-main/ayce-code/Assets/Styles/Site.css
+++ b/ayce-main/ayce-code/Assets/Styles/Site.css
@@ -29,7 +29,9 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.25rem; }
   h6 {
     font-size: 1.25rem;
-    line-height: 1rem; } }
+    line-height: 1rem; }
+  p {
+    font-size: 0.75rem; } }
 
 @media (min-width: 40em) and (max-width: 64em) {
   h1 {
@@ -49,7 +51,9 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.75rem; }
   h6 {
     font-size: 1.5rem;
-    line-height: 1.25rem; } }
+    line-height: 1.25rem; }
+  p {
+    font-size: 0.85rem; } }
 
 @media (min-width: 64em) {
   h1 {
@@ -69,7 +73,9 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 2.25rem; }
   h6 {
     font-size: 2rem;
-    line-height: 1.75rem; } }
+    line-height: 1.75rem; }
+  p {
+    font-size: 1rem; } }
 
 .topbar-responsive {
   background: #FFFFFF;
@@ -127,6 +133,7 @@ h1, h2, h3, h4, h5, h6 {
   animation: fadeIn 1s ease-in; }
 
 .hero-component {
+  margin-bottom: 2rem;
   min-height: 25rem; }
 
 .hero-background-image {
@@ -170,3 +177,52 @@ h1, h2, h3, h4, h5, h6 {
   .hero-subheadline-text {
     font-size: 1.5rem;
     line-height: 2rem; } }
+
+.cuisine-menu-component {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  width: 100%; }
+
+.cuisine-menu-title {
+  text-align: center; }
+
+.cuisine-menu-item-container {
+  margin: 0 0 0 0; }
+
+.cuisine-menu-item {
+  margin-top: 1rem;
+  width: 4rem;
+  text-align: center;
+  height: 10rem;
+  background-color: #FFFFFF;
+  border: 0.0625rem solid #000000;
+  transition: transform .2s; }
+
+.cuisine-menu-item:hover {
+  transform: scale(1.25); }
+  .cuisine-menu-item:hover .cuisine-menu-item:not(:hover) {
+    transform: scale(0.75); }
+
+.cuisine-menu-primary-maroon {
+  background-color: #8D0F39; }
+
+.cuisine-menu-black {
+  background-color: #042A2B; }
+
+.cuisine-menu-icon-container {
+  margin: auto;
+  margin-top: 1rem;
+  width: 80%;
+  height: 60%;
+  border: 0.0625rem solid #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.cuisine-menu-icon {
+  max-height: 60%;
+  max-width: 80%; }
+
+.cuisine-menu-item-text {
+  color: #000000;
+  margin-top: 0.75rem; }
