Updated svgs to be dynamically sized Created CookingFeed component Included footer for page layout

--- a/ayce-main/ayce-code/Views/ButterCMSPage/Main.cshtml
+++ b/ayce-main/ayce-code/Views/ButterCMSPage/Main.cshtml
@@ -13,4 +13,9 @@
 {
     @Html.Partial("~/Views/Shared/Components/CuisineQuickMenu.cshtml")
 }
+@if (Model.CookingFeed != null)
+{
+    @Html.Partial("~/Views/Shared/Components/CookingFeed.cshtml")
+}
+
 
