--- a/ayce-main/ayce-code/Views/Shared/_Layout.cshtml
+++ b/ayce-main/ayce-code/Views/Shared/_Layout.cshtml
@@ -20,9 +20,7 @@
     </div>
 
     <!-- Start Footer View-->
-    <footer>
-        <p>&copy; @DateTime.Now.Year - ayce</p>
-    </footer>
+    @Html.Partial("~/Views/Shared/Partials/Footer.cshtml")
     <!-- End Footer View-->
 
     <!-- Start jquery bundle -->
