--- a/ayce-main/ayce-code/Assets/Styles/Site.css
+++ b/ayce-main/ayce-code/Assets/Styles/Site.css
@@ -19,16 +19,16 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 2.5rem;
     line-height: 2rem; }
   h3 {
-    font-size: 2.25rem;
-    line-height: 2rem; }
+    font-size: 1.75rem;
+    line-height: 1.5rem; }
   h4 {
     font-size: 2rem;
-    line-height: 1.5rem; }
+    line-height: 2rem; }
   h5 {
-    font-size: 1.5rem;
-    line-height: 1.25rem; }
+    font-size: 1.75rem;
+    line-height: 1.5rem; }
   h6 {
-    font-size: 1.25rem;
+    font-size: 1rem;
     line-height: 1rem; }
   p {
     font-size: 0.75rem; } }
@@ -41,16 +41,16 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 3rem;
     line-height: 2.5rem; }
   h3 {
-    font-size: 2.75rem;
-    line-height: 2.5rem; }
+    font-size: 2rem;
+    line-height: 2rem; }
   h4 {
-    font-size: 2.5rem;
+    font-size: 2.25rem;
     line-height: 2rem; }
   h5 {
     font-size: 2rem;
-    line-height: 1.75rem; }
+    line-height: 2rem; }
   h6 {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     line-height: 1.25rem; }
   p {
     font-size: 0.85rem; } }
@@ -63,17 +63,17 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 3.5rem;
     line-height: 3rem; }
   h3 {
-    font-size: 3.25rem;
-    line-height: 3rem; }
+    font-size: 2.25rem;
+    line-height: 2rem; }
   h4 {
-    font-size: 3rem;
-    line-height: 2.5rem; }
-  h5 {
     font-size: 2.5rem;
-    line-height: 2.25rem; }
+    line-height: 2rem; }
+  h5 {
+    font-size: 2.25rem;
+    line-height: 2rem; }
   h6 {
-    font-size: 2rem;
-    line-height: 1.75rem; }
+    font-size: 1.5rem;
+    line-height: 1rem; }
   p {
     font-size: 1rem; } }
 
@@ -131,6 +131,24 @@ h1, h2, h3, h4, h5, h6 {
   animation-duration: 0.5s;
   width: 100%;
   animation: fadeIn 1s ease-in; }
+
+.footer-container {
+  margin: 1rem;
+  height: 5rem; }
+
+.footer-links {
+  height: 100%;
+  text-align: center; }
+
+.footer-social {
+  margin: 1rem;
+  height: 100%; }
+
+.footer-github {
+  height: 100%; }
+
+.footer-linkedin {
+  height: 100%; }
 
 .hero-component {
   margin-bottom: 2rem;
@@ -220,9 +238,84 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center; }
 
 .cuisine-menu-icon {
-  max-height: 60%;
+  height: 80%;
   max-width: 80%; }
 
 .cuisine-menu-item-text {
   color: #000000;
   margin-top: 0.75rem; }
+
+.cooking-feed-component {
+  margin: auto;
+  width: 70%; }
+
+.cooking-feed-title {
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem; }
+
+.cooking-feed-item {
+  width: 100%;
+  border: 0.0625rem solid #000000;
+  border-radius: 0.5rem;
+  margin-bottom: 1rem;
+  overflow: hidden; }
+
+.cooking-feed-image-container {
+  height: 100%; }
+
+.cooking-feed-image {
+  width: 100%;
+  transform: translateY(-20%); }
+
+.cooking-feed-info-container {
+  height: 100%; }
+
+.cooking-feed-info {
+  margin: 1rem;
+  text-align: right; }
+
+.cooking-feed-item-title > h3 {
+  text-align: right;
+  margin-bottom: 1rem; }
+
+.cooking-feed-item-rating {
+  margin-left: auto;
+  width: 60%; }
+
+.cooking-feed-item-description {
+  margin: auto; }
+
+@media (max-width: 40em) {
+  .cooking-feed-item-title > h3 {
+    font-size: 1rem;
+    margin: auto; }
+  .cooking-feed-item-description {
+    display: none; }
+  .cooking-feed-item {
+    height: 7.5rem; }
+  .cooking-feed-item-rating {
+    display: none; }
+  .cooking-feed-info {
+    margin: 0.5rem;
+    text-align: right; } }
+
+@media (min-width: 40em) and (max-width: 64em) {
+  .cooking-feed-item-title > h3 {
+    font-size: 1.25rem; }
+  .cooking-feed-item-description {
+    display: none; }
+  .cooking-feed-item {
+    height: 10rem; }
+  .cooking-feed-info {
+    margin: 1rem;
+    text-align: right; } }
+
+@media (min-width: 64em) {
+  .cooking-feed-item-title > h3 {
+    font-size: 1.5rem; }
+  .cooking-feed-item {
+    height: 20rem; }
+  .cooking-feed-info {
+    margin: 1rem;
+    text-align: right; } }
