Updated to include ButterCMS logo Updates to view for DishFeed and DishPage

--- a/ayce-main/ayce-code/Assets/Styles/Main/_Footer.scss
+++ b/ayce-main/ayce-code/Assets/Styles/Main/_Footer.scss
@@ -9,8 +9,10 @@
     text-align: center;
 }
 
-.footer-about-page {
-
+.footer-cms {
+    width: 20%;
+    margin: auto;
+    margin-bottom: 1rem;
 }
 
 .footer-copyright {
