--- a/ayce-main/ayce-code/Views/Shared/Partials/Footer.cshtml
+++ b/ayce-main/ayce-code/Views/Shared/Partials/Footer.cshtml
@@ -1,10 +1,10 @@
 ﻿<footer>
     <div class="footer-container grid-x grid-margin-x">
         <div class="footer-links cell small-6">
-            <div class="footer-about-page">
-                <p>
-                    <a href="https://google.com">About Us</a>
-                </p>
+            <div class="footer-cms">
+                <a href="https://buttercms.com/">
+                    <img src="~/Assets/Images/butter-b.png" alt="ButterCMS logo"/>
+                </a>
             </div>
             <div class="footer-copyright">
                 <p>&copy; @DateTime.Now.Year - ayce</p>
