--- a/ayce-main/ayce-code/Views/Shared/Partials/Header.cshtml
+++ b/ayce-main/ayce-code/Views/Shared/Partials/Header.cshtml
@@ -12,9 +12,9 @@
         <div class="top-bar-right" data-dropdown-menu>
             <ul class="menu vertical medium-horizontal">
                 <li><a href="@HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority)">Home</a></li>
-                <li><a href="/dish">Explore</a></li> <!--@Html.ActionLink("Contact", "Contact", "Home")-->
-                <li><a href="#">Recommendations</a></li>
-                <li><a href="#">Decision</a></li>
+                <li><a href="/dish">Explore</a></li>
+                <li><a href="#">Gear</a></li>
+                <li><a href="#">About</a></li>
             </ul>
         </div>
     </div>
