--- a/ayce-main/ayce-code/Assets/Styles/Site.css
+++ b/ayce-main/ayce-code/Assets/Styles/Site.css
@@ -13,8 +13,8 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 40em) {
   h1 {
-    font-size: 4rem;
-    line-height: 3rem; }
+    font-size: 3rem;
+    line-height: 2.5rem; }
   h2 {
     font-size: 2.5rem;
     line-height: 2rem; }
@@ -35,8 +35,8 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (min-width: 40em) and (max-width: 64em) {
   h1 {
-    font-size: 5rem;
-    line-height: 4rem; }
+    font-size: 3.5rem;
+    line-height: 3rem; }
   h2 {
     font-size: 3rem;
     line-height: 2.5rem; }
@@ -57,8 +57,8 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (min-width: 64em) {
   h1 {
-    font-size: 6rem;
-    line-height: 5rem; }
+    font-size: 4rem;
+    line-height: 4rem; }
   h2 {
     font-size: 3.5rem;
     line-height: 3rem; }
@@ -89,7 +89,7 @@ h1, h2, h3, h4, h5, h6 {
   .topbar-responsive .menu {
     background: #FFFFFF; }
     .topbar-responsive .menu li {
-      margin-left: 0.5rem; }
+      margin-left: 1rem; }
     .topbar-responsive .menu a {
       padding: 0.5rem;
       border-radius: 0.75rem;
@@ -139,6 +139,11 @@ h1, h2, h3, h4, h5, h6 {
 .footer-links {
   height: 100%;
   text-align: center; }
+
+.footer-cms {
+  width: 20%;
+  margin: auto;
+  margin-bottom: 1rem; }
 
 .footer-social {
   margin: 1rem;
