--- a/ayce-main/ayce-code/Views/ButterCMSPage/DishFeed.cshtml
+++ b/ayce-main/ayce-code/Views/ButterCMSPage/DishFeed.cshtml
@@ -5,19 +5,20 @@
     ViewBag.Title = "Dish Feed";
 }
 
-<h2>DishFeed</h2>
-<p>
-    <img src="@Model.Dishes[0].DishImage"/>
-</p>
-
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<div class="dish-feed-page">
+    <div class="dish-feed-dishes grid-x">
+        @foreach (var dish in Model.Dishes)
+        {
+        <div class="dish-feed-item cell grid-x">
+            <div class="dish-feed-name">
+                <a href="/dish/@dish.Slug">
+                    @dish.DishTitle
+                </a>
+            </div>
+            <div>
+                <img src="@dish.DishImage" />
+            </div>
+        </div>
+        }
+    </div>
+</div>
