--- a/ayce-main/ayce-code/Views/ButterCMSPage/Main.cshtml
+++ b/ayce-main/ayce-code/Views/ButterCMSPage/Main.cshtml
@@ -5,17 +5,19 @@
     ViewBag.Title = "Main";
 }
 
-@if (Model.Hero != null)
-{
-    @Html.Partial("~/Views/Shared/Components/Hero.cshtml")
-}
-@if (Model.CuisineQuickMenu != null)
-{
-    @Html.Partial("~/Views/Shared/Components/CuisineQuickMenu.cshtml")
-}
-@if (Model.CookingFeed != null)
-{
-    @Html.Partial("~/Views/Shared/Components/CookingFeed.cshtml")
-}
+<div class="main-page">
+    @if (Model.Hero != null)
+    {
+        @Html.Partial("~/Views/Shared/Components/Hero.cshtml")
+    }
+    @if (Model.CuisineQuickMenu != null)
+    {
+        @Html.Partial("~/Views/Shared/Components/CuisineQuickMenu.cshtml")
+    }
+    @if (Model.CookingFeed != null)
+    {
+        @Html.Partial("~/Views/Shared/Components/CookingFeed.cshtml")
+    }
+</div>
 
 
