Modify view for Dish pages Change standard font sizes

--- a/ayce-main/ayce-code/Assets/Styles/Site.scss
+++ b/ayce-main/ayce-code/Assets/Styles/Site.scss
@@ -6,6 +6,9 @@
 @import 'Main/_Header.scss';
 @import 'Main/_Footer.scss';
 
+//Pages
+@import 'Pages/_Dish.scss';
+
 //Components
 @import 'Components/_Hero.scss';
 @import 'Components/_CuisineQuickMenu.scss';
