--- a/ayce-main/ayce-code/Assets/Styles/Site.css
+++ b/ayce-main/ayce-code/Assets/Styles/Site.css
@@ -16,8 +16,8 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 3rem;
     line-height: 2.5rem; }
   h2 {
-    font-size: 2.5rem;
-    line-height: 2rem; }
+    font-size: 1.5rem;
+    line-height: 1.5rem; }
   h3 {
     font-size: 1.75rem;
     line-height: 1.5rem; }
@@ -38,8 +38,8 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 3.5rem;
     line-height: 3rem; }
   h2 {
-    font-size: 3rem;
-    line-height: 2.5rem; }
+    font-size: 2rem;
+    line-height: 1.75rem; }
   h3 {
     font-size: 2rem;
     line-height: 2rem; }
@@ -60,8 +60,8 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 4rem;
     line-height: 4rem; }
   h2 {
-    font-size: 3.5rem;
-    line-height: 3rem; }
+    font-size: 2.5rem;
+    line-height: 2rem; }
   h3 {
     font-size: 2.25rem;
     line-height: 2rem; }
@@ -141,7 +141,7 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center; }
 
 .footer-cms {
-  width: 20%;
+  width: 30%;
   margin: auto;
   margin-bottom: 1rem; }
 
@@ -154,6 +154,43 @@ h1, h2, h3, h4, h5, h6 {
 
 .footer-linkedin {
   height: 100%; }
+
+.dish-title {
+  margin-top: 2rem;
+  margin-bottom: 2rem; }
+
+.dish-rating {
+  width: 20%;
+  margin: auto;
+  margin-bottom: 2rem; }
+
+.dish-image-container {
+  width: 80%;
+  margin: auto;
+  padding: 1rem;
+  background-color: #8D0F39; }
+
+.dish-image {
+  width: 100%; }
+
+.dish-information-container {
+  width: 80%;
+  margin-left: 2rem;
+  text-align: left; }
+
+.dish-cuisine {
+  padding: 1rem 0 1rem 0;
+  margin-bottom: 1rem; }
+  .dish-cuisine h2 {
+    text-align: left;
+    margin-bottom: 1rem; }
+
+.dish-description {
+  padding: 1rem 0 1rem 0;
+  margin-bottom: 1rem; }
+  .dish-description h2 {
+    text-align: left;
+    margin-bottom: 1rem; }
 
 .hero-component {
   margin-bottom: 2rem;
@@ -175,7 +212,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 60%; }
 
 @media (max-width: 40em) {
-  .hero-headline-text {
+  .hero-headline-text > h1 {
     font-size: 4rem;
     line-height: 5rem;
     margin-bottom: 2rem; }
@@ -184,7 +221,7 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1rem; } }
 
 @media (min-width: 40em) and (max-width: 64em) {
-  .hero-headline-text {
+  .hero-headline-text > h1 {
     font-size: 6rem;
     line-height: 8rem;
     margin-bottom: 1rem; }
